# scraper_gg

./: Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  rustfmt.toml
daemon/: Cargo.toml
daemon/src/: lib.rs  messages.rs
gg_query/: Cargo.toml
gg_query/src/: provider.rs  types.rs
normalized_data/: Cargo.toml
normalized_data/src/: core_data_types.rs  data_types.rs  dehydrated_data_types.rs  dehydrated_normalized_data.rs  hydrated_data_types.rs  hydrated_normalized_data.rs  lib.rs  normalized_data.rs  normalized_hydrated_data_types.rs
provider/: Cargo.toml
provider/src/: cached_provider.rs  lib.rs  provider.rs
query_interface/: Cargo.toml
query_interface/src/: lib.rs  service_reg.rs
reporting/reporter_cli/: Cargo.toml
reporting/reporter_cli/src/: dispatcher.rs  lib.rs  main.rs  message_loop.rs  prog_args.rs  tui_state.rs
reporting/reporter_cli/src/pages/: mod.rs  root.rs  stats.rs  tui_action_processing.rs
reporting/reporter_state/: Cargo.toml
reporting/reporter_state/src/: lib.rs  rest_provider.rs  types.rs
reporting/reporter_state/src/stores/: mod.rs  stats.rs  store_action_processing.rs  store_utils.rs  tourney.rs
