[package]
name = "reporter_cli"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
clap = { version = "4.5.4", features = ["derive"] }
crossterm = "0.27.0"
ratatui = { version = "0.26.2", features = ["unstable-widget-ref"] }
reporter_state = { path = "../reporter_state" }
tokio = { version = "1.38.0", features = ["macros", "rt-multi-thread", "time"] }
